--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "mysql": "^2.17.1",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {},
